--- a/blocklib/digitizers/chi_square_fit/chi_square_fit.yml
+++ b/blocklib/digitizers/chi_square_fit/chi_square_fit.yml
@@ -82,3 +82,12 @@ implementations:
 -   id: cpu
 
 file_format: 1
+
+doc:
+  brief: It accepts vectors of samples in the time/freq domain and tries to fit the given function from lim_dn to lim_up of the input vector.
+  detail: |-
+        The functions parameters will be adjusted in each iteration. The parameters of
+        the function are bordered in a hypercube with size of par_lim_dn -> par_lim_up.
+        Each given parameter has a corresponding flag, weather it is constant or not.
+
+        The initial values of the parameter are supplied in par_init.
