--- a/blocklib/digitizers/edge_trigger_receiver/edge_trigger_receiver.yml
+++ b/blocklib/digitizers/edge_trigger_receiver/edge_trigger_receiver.yml
@@ -21,3 +21,20 @@ implementations:
 -   id: cpu
 
 file_format: 1
+
+doc:
+  brief: Listens for UDP packets. when it receives one, it sends a predetermined number of zeroes, with a tag.
+  detail: |-
+        User can then do everything else. The format of the datagram is shown below:
+        \code
+        <edgeDetect
+               edge="rising"
+               val="0.6545"
+               timingEventTimeStamp="timestamp"
+               retriggerEventTimeStamp="timestamp"
+               delaySinceLastTimingEvent="delay in nanoseconds"
+               samplesSinceLastTimingEvent="samples" />
+        \endcode
+
+        The stream is composed of only zeroes. It is up to the user to throttle the block.
+        When a datagram with this content arrives, the block attaches a tag to the stream.
