--- a/blocklib/digitizers/freq_estimator/freq_estimator.yml
+++ b/blocklib/digitizers/freq_estimator/freq_estimator.yml
@@ -33,3 +33,17 @@ implementations:
 -   id: cpu
 
 file_format: 1
+
+doc:
+  brief: Estimates a base frequency of the signal by counting the number of samples between events where signal goes through zero, and computing the time that took, given the sampling rate.
+  detail: |-
+        This is just a rough estimate of the frequency. To avoid false positives because of noise and
+        other undesired components of the signal, the signal is passed through a running average of size
+        given by the user. The result itself is then also averaged with the same averaging window for a
+        more stable result.
+
+        Meaning the estimate of the frequency is an inverse of the average of the last
+        n time intervals it took for the averaged signal(to remove noise) to pass through zero.
+
+        IMPORTANT:
+        The specified window must be much smaller than the number of samples in one cycle of the signal!
