--- a/blocklib/digitizers/freq_sink/freq_sink.yml
+++ b/blocklib/digitizers/freq_sink/freq_sink.yml
@@ -71,3 +71,13 @@ implementations:
 -   id: cpu
 
 file_format: 1
+
+doc:
+  brief: Spectra measurement metadata.
+  detail: |-
+        Note, trigger_timestamp is the the same timestamp as provided to the time-realignment block
+        (via the add_timing_event method), else it contains the local timestamp of the first
+        post-trigger sample.
+
+        Member-variable timestamp contains timestamp of the first pre-trigger sample, or if there is
+        none the timestamp of the first sample.
