--- a/blocklib/digitizers/signal_averager/signal_averager.yml
+++ b/blocklib/digitizers/signal_averager/signal_averager.yml
@@ -31,3 +31,14 @@ implementations:
 # -   id: cuda
 
 file_format: 1
+
+doc:
+  brief: Average samples in window and generate a single sample.
+  detail: |-
+        The block decimates the data with the step of window size.
+
+        Tags are attached to the correspondent decimated sample, timebase and acq_info tags
+        are fixed with the decimation factor and user provided delay. If more than one acq_info
+        tags falls into the same output offset then the tags get merged.
+
+        It supports multiple input signals. Does the same on each input port.
