--- a/blocklib/digitizers/stft_goertzl_dynamic/stft_goertzl_dynamic.yml
+++ b/blocklib/digitizers/stft_goertzl_dynamic/stft_goertzl_dynamic.yml
@@ -49,3 +49,21 @@ implementations:
 -   id: cpu
 
 file_format: 1
+
+doc:
+  brief: The block returns the response from lower frequency to the upper frequency.
+  detail: |-
+        Both bounds are read from inputs, with the correspondent vector of samples. The vector
+        of samples needs to be of length winsize. The block creates nbins different frequency
+        repsonses, that are linearly interpolated between the lower and upper bound. The
+        boundries are considered as part of the window, except in the case where there is only
+        one bin, in which case the analysis frequency is the average of fMin and fMax,
+        ie. (fMin+fMax)/2. The block returns magnitudes, phase shifts, and frequencies of the
+        analysis, all of length nbins.
+
+        ^
+        |          < - - - - - - - >
+        |          |       |       |
+        |          b0      b1      b2
+        L----------*---------------*------------*>
+        0          fMin            fMax         f_samp*
