--- a/grc/pulsed_power_daq_power_calc_mul_ph_ff.block.yml
+++ b/grc/pulsed_power_daq_power_calc_mul_ph_ff.block.yml
@@ -1,10 +1,31 @@
 id: pulsed_power_daq_power_calc_mul_ph_ff
 label: power_calc_mul_ph_ff
+flags: [ python, cpp ] 
 category: '[pulsed_power_daq]'
 
 templates:
-  imports: import pulsed_power_daq
+  imports: from gnuradio import pulsed_power_daq
   make: pulsed_power_daq.power_calc_mul_ph_ff(${alpha})
+
+# cpp_templates: 
+#   includes: ['#include <pulsed_power_daq/power_calc_mul_ph_ff.h>'] 
+#   declarations: 'pulsed_power_daq::power_calc_mul_ph_ff::sptr ${id};' 
+#   make: 'this->${id} = pulsed_power_daq::power_calc_mul_ph_ff::make(${alpha});' 
+
+cpp_templates: 
+  includes: ['#include <pulsed_power_daq/power_calc_mul_ph_ff.h>'] 
+  declarations: 'pulsed_power_daq::power_calc_mul_ph_ff::sptr ${id};' 
+  make: 'this->${id} = pulsed_power_daq::power_calc_mul_ph_ff::make(${alpha});' 
+  packages: ['pulsed_power_daq'] 
+  link: ['pulsed_power_daq']
+# templates:
+#     imports: from gnuradio import blocks
+#     make: blocks.add_v${type.fcn}(${vlen})
+
+# cpp_templates:
+#     includes: ['#include <gnuradio/blocks/add_blk.h>']
+#     declarations: 'blocks::add_${type.fcn}::sptr ${id};'
+#     make: 'this->${id} = blocks::add_${type.fcn}::make(${vlen});'
 
 #  Make one 'parameters' list entry for every parameter you want settable from the GUI.
 #     Keys include:
@@ -107,3 +128,5 @@ outputs:
 #  'file_format' specifies the version of the GRC yml format used in the file
 #  and should usually not be changed.
 file_format: 1
+
+
