--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
+# Binary files
+build/
+builddir/
 
+# Annoying OS Generated Files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+.directory
+*~
 
-/Digitizer*tar.gz
-/DigitizerDependencies*tar.gz
+# IDE files
+.vs/
+.idea/
+.vscode/
+.cache
+language.settings.xml
+**/**.swp
+
+# python venv files
+virtualenv/
