--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,18 +27,18 @@ jobs:
         name: Checkout Project
       - name: Install picoscope
         run: |
-          sudo apt-get update
-          sudo apt-get install wget
+          su -c "apt-get update"
+          su -c "apt-get install wget"
           # https://www.picotech.com/downloads/linux
-          wget -qO - https://labs.picotech.com/Release.gpg.key | sudo apt-key add -
-          sudo bash -c 'echo "deb https://labs.picotech.com/rc/picoscope7/debian/ picoscope main" >/etc/apt/sources.list.d/picoscope7.list'
-          sudo apt-get update
-          sudo apt-get install libps3000a libps4000a libps5000a libps6000a
+          wget -qO - https://labs.picotech.com/Release.gpg.key | su -c "apt-key add -"
+          su -c "bash -c 'echo \"deb https://labs.picotech.com/rc/picoscope7/debian/ picoscope main\" >/etc/apt/sources.list.d/picoscope7.list'"
+          su -c "apt-get update"
+          su -c "apt-get install libps3000a libps4000a libps5000a libps6000a"
       - name: Install root
         run: |
-          sudo apt-get update
+          su -c "apt-get update"
           # https://root.cern/install/dependencies/
-          sudo apt-get install dpkg-dev cmake g++ gcc binutils libx11-dev libxpm-dev libxft-dev libxext-dev python libssl-dev
+          su -c "apt-get install dpkg-dev cmake g++ gcc binutils libx11-dev libxpm-dev libxft-dev libxext-dev python libssl-dev"
           # https://root.cern/install/#download-a-pre-compiled-binary-distribution
           wget https://root.cern/download/root_v6.26.10.Linux-ubuntu22-x86_64-gcc11.3.tar.gz
           tar -xzvf root_v6.26.10.Linux-ubuntu22-x86_64-gcc11.3.tar.gz
