--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,17 +28,17 @@ jobs:
       - name: Install picoscope
         run: |
           su -c "apt-get update"
-          su -c "apt-get install wget gnupg2"
+          su -c "apt-get --yes install wget gnupg2"
           # https://www.picotech.com/downloads/linux
           wget -qO - https://labs.picotech.com/Release.gpg.key | su -c "apt-key add -"
           su -c "bash -c 'echo \"deb https://labs.picotech.com/rc/picoscope7/debian/ picoscope main\" >/etc/apt/sources.list.d/picoscope7.list'"
           su -c "apt-get update"
-          su -c "apt-get install libps3000a libps4000a libps5000a libps6000a"
+          su -c "apt-get --yes install libps3000a libps4000a libps5000a libps6000a"
       - name: Install root
         run: |
           su -c "apt-get update"
           # https://root.cern/install/dependencies/
-          su -c "apt-get install dpkg-dev cmake g++ gcc binutils libx11-dev libxpm-dev libxft-dev libxext-dev python libssl-dev"
+          su -c "apt-get --yes install dpkg-dev cmake g++ gcc binutils libx11-dev libxpm-dev libxft-dev libxext-dev python libssl-dev"
           # https://root.cern/install/#download-a-pre-compiled-binary-distribution
           wget https://root.cern/download/root_v6.26.10.Linux-ubuntu22-x86_64-gcc11.3.tar.gz
           tar -xzvf root_v6.26.10.Linux-ubuntu22-x86_64-gcc11.3.tar.gz
