--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,22 +40,28 @@ jobs:
           # https://root.cern/install/dependencies/
           su -c "apt-get --yes install dpkg-dev cmake g++ gcc binutils libx11-dev libxpm-dev libxft-dev libxext-dev python3 libssl-dev" || true
           # https://root.cern/install/#download-a-pre-compiled-binary-distribution
-          wget https://root.cern/download/root_v6.26.10.Linux-ubuntu22-x86_64-gcc11.3.tar.gz
-          tar -xzvf root_v6.26.10.Linux-ubuntu22-x86_64-gcc11.3.tar.gz
-          # cat root/bin/thisroot.sh >> $GITHUB_ENV # add root environment setup to default environment for subsequent steps
-          # cat root/bin/thisroot.sh
+          mkdir .local
+          cd .local
+          wget -qO - https://root.cern/download/root_v6.26.10.Linux-ubuntu22-x86_64-gcc11.3.tar.gz | tar -xzv
+          pwd
       - name: Install gr-digitizer dependencies
         run: |
           su -c "apt-get update"
           su -c "apt-get --yes install libboost-dev libboost-chrono-dev libboost-thread-dev libsndfile1-dev libcppunit-dev" || true
       - name: Meson Setup
-        run: 'cd ${GITHUB_WORKSPACE} && meson setup build --buildtype=debugoptimized -Denable_testing=true -Dlibpicoscope_prefix=/opt/picoscope -Dlibroot_prefix=./root'
+        run: |
+          source .local/root/bin/thisroot.sh
+          meson setup build --buildtype=debugoptimized -Denable_testing=true -Dlibpicoscope_prefix=/opt/picoscope -Dlibroot_prefix=./.local/root
       - name: Make
-        run: 'cd ${GITHUB_WORKSPACE}/build && ninja'
+        run: |
+          source .local/root/bin/thisroot.sh
+          cd build
+          ninja
       - name: Make Test
         run: |
-          source root/bin/thisroot.sh
-          'cd ${GITHUB_WORKSPACE}/build && ninja test'
+          source .local/root/bin/thisroot.sh
+          cd build
+          ninja test
       - uses: actions/upload-artifact@v1
         if: failure()
         with:
