--- a/blocklib/digitizers/simulation_source/simulation_source.yml
+++ b/blocklib/digitizers/simulation_source/simulation_source.yml
@@ -3,6 +3,7 @@ block: simulation_source
 label: simulation_source
 blocktype: sync_block
 includes:
+  - gnuradio/digitizers/digitizer_enums.h
   - gnuradio/digitizers/enums.h
 
 parameters:
@@ -62,17 +63,37 @@ parameters:
     default: 'false'
 
 callbacks:
-   - id: set_data
-     return: void
-     args:
-      - id: channel_a_data
-        dtype: std::vector<float>
-      - id: channel_b_data
-        dtype: std::vector<float>
-      - id: port_data
-        dtype: std::vector<uint8_t>
+    - id: set_data
+      return: void
+      args:
+       - id: channel_a_data
+         dtype: std::vector<float>
+       - id: channel_b_data
+         dtype: std::vector<float>
+       - id: port_data
+         dtype: std::vector<uint8_t>
+    - id: set_aichan_trigger
+      return: void
+      args:
+       - id: channel_id
+         dtype: string
+       - id: trigger_direction
+         dtype: gr::digitizers::trigger_direction_t
+       - id: threshold
+         dtype: rf64
+    - id: set_di_trigger
+      return: void
+      args:
+       - id: pin
+         dtype: uint8_t
+       - id: trigger_direction
+         dtype: gr::digitizers::trigger_direction_t
 
 ports:
+-   domain: message
+    id: timing
+    direction: input
+    optional: true
 -   domain: stream
     id: value_a
     direction: output
