Add block for PicoScope 5000a
Also re-use the error code to string functions, as the PicoStatus enum
is de-facto the same for all devices.

Implements #29

--- a/blocklib/picoscope3000a/lib/meson.build
+++ b/blocklib/picoscope3000a/lib/meson.build
@@ -1,5 +1,5 @@
 picoscope3000a_sources += []
-picoscope3000a_deps += [gnuradio_blocklib_digitizers_dep, libpicoscope3000a_dep]
+picoscope3000a_deps += [gnuradio_blocklib_digitizers_dep, libpicoscope3000a_dep, picoscopeimpl_dep]
 
 block_cpp_args = ['-DHAVE_CPU']
 
